--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ appnope==0.1.0
 bdist-mpkg==0.5.0
 decorator==4.0.6
 Django==1.9
+gunicorn==19.4.5
 dj-database-url==0.3.0
 djangorestframework==3.3.2
 gnureadline==6.3.3
